tests/basic/check/assert/040.pan
assert : { b:ğ”¹ | b = true } â†’ ğŸ™

f40 : {v:unit|false}
f40 = assert false

-- NOTE: "vâ‰ unit" reduces to "false"
f41 : {v:unit|vâ‰ unit}
f41 = assert false

-- NOTE: 
-- these should fail because "assert false" does not typecheck.
-- the type of "assert false" is not a subtype of "{v:unit|false}"
-- the type of "assert false" does not exist!
